[ADD] LSTM model

--- a/src/notebooks/CMAPSS_EDA.ipynb
+++ b/src/notebooks/CMAPSS_EDA.ipynb
@@ -10,9 +10,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 23,
+   "id": "37dfbaae-742f-4af5-8ea8-ebeafff4834b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Collecting scikit-learn\n",
+      "  Obtaining dependency information for scikit-learn from https://files.pythonhosted.org/packages/96/cf/a714a655266229b51eb2bda117f15275f12457887f165f3c1cc58ab502f1/scikit_learn-1.3.0-cp310-cp310-win_amd64.whl.metadata\n",
+      "  Downloading scikit_learn-1.3.0-cp310-cp310-win_amd64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\htrung\\.conda\\envs\\tensorflow\\lib\\site-packages (from scikit-learn) (1.26.0)\n",
+      "Collecting scipy>=1.5.0 (from scikit-learn)\n",
+      "  Obtaining dependency information for scipy>=1.5.0 from https://files.pythonhosted.org/packages/70/03/485f73046134400ea25d3cb178c5e6728f9b165f79d09638ecb44ee0e9b1/scipy-1.11.2-cp310-cp310-win_amd64.whl.metadata\n",
+      "  Downloading scipy-1.11.2-cp310-cp310-win_amd64.whl.metadata (59 kB)\n",
+      "     ---------------------------------------- 0.0/59.1 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 59.1/59.1 kB ? eta 0:00:00\n",
+      "Collecting joblib>=1.1.1 (from scikit-learn)\n",
+      "  Obtaining dependency information for joblib>=1.1.1 from https://files.pythonhosted.org/packages/10/40/d551139c85db202f1f384ba8bcf96aca2f329440a844f924c8a0040b6d02/joblib-1.3.2-py3-none-any.whl.metadata\n",
+      "  Downloading joblib-1.3.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting threadpoolctl>=2.0.0 (from scikit-learn)\n",
+      "  Obtaining dependency information for threadpoolctl>=2.0.0 from https://files.pythonhosted.org/packages/81/12/fd4dea011af9d69e1cad05c75f3f7202cdcbeac9b712eea58ca779a72865/threadpoolctl-3.2.0-py3-none-any.whl.metadata\n",
+      "  Downloading threadpoolctl-3.2.0-py3-none-any.whl.metadata (10.0 kB)\n",
+      "Downloading scikit_learn-1.3.0-cp310-cp310-win_amd64.whl (9.2 MB)\n",
+      "   ---------------------------------------- 0.0/9.2 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.1/9.2 MB 4.3 MB/s eta 0:00:03\n",
+      "   - -------------------------------------- 0.3/9.2 MB 3.4 MB/s eta 0:00:03\n",
+      "   -- ------------------------------------- 0.5/9.2 MB 4.0 MB/s eta 0:00:03\n",
+      "   --- ------------------------------------ 0.7/9.2 MB 4.2 MB/s eta 0:00:03\n",
+      "   --- ------------------------------------ 0.9/9.2 MB 4.1 MB/s eta 0:00:03\n",
+      "   ---- ----------------------------------- 1.1/9.2 MB 4.2 MB/s eta 0:00:02\n",
+      "   ------ --------------------------------- 1.4/9.2 MB 4.4 MB/s eta 0:00:02\n",
+      "   ------ --------------------------------- 1.6/9.2 MB 4.2 MB/s eta 0:00:02\n",
+      "   ------- -------------------------------- 1.8/9.2 MB 4.3 MB/s eta 0:00:02\n",
+      "   -------- ------------------------------- 2.0/9.2 MB 4.4 MB/s eta 0:00:02\n",
+      "   --------- ------------------------------ 2.2/9.2 MB 4.4 MB/s eta 0:00:02\n",
+      "   ----------- ---------------------------- 2.5/9.2 MB 4.6 MB/s eta 0:00:02\n",
+      "   ------------ --------------------------- 2.9/9.2 MB 4.8 MB/s eta 0:00:02\n",
+      "   ------------- -------------------------- 3.2/9.2 MB 4.9 MB/s eta 0:00:02\n",
+      "   --------------- ------------------------ 3.5/9.2 MB 5.1 MB/s eta 0:00:02\n",
+      "   ---------------- ----------------------- 3.8/9.2 MB 5.2 MB/s eta 0:00:02\n",
+      "   ----------------- ---------------------- 4.2/9.2 MB 5.3 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 4.4/9.2 MB 5.4 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 4.8/9.2 MB 5.5 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 5.2/9.2 MB 5.6 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 5.6/9.2 MB 5.7 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 5.9/9.2 MB 5.8 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 6.2/9.2 MB 5.9 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 6.5/9.2 MB 6.0 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 7.0/9.2 MB 6.1 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 7.4/9.2 MB 6.2 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 7.8/9.2 MB 6.3 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 8.3/9.2 MB 6.5 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 8.8/9.2 MB 6.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 9.2/9.2 MB 6.7 MB/s eta 0:00:00\n",
+      "Downloading joblib-1.3.2-py3-none-any.whl (302 kB)\n",
+      "   ---------------------------------------- 0.0/302.2 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 302.2/302.2 kB 9.4 MB/s eta 0:00:00\n",
+      "Downloading scipy-1.11.2-cp310-cp310-win_amd64.whl (44.0 MB)\n",
+      "   ---------------------------------------- 0.0/44.0 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.4/44.0 MB 12.6 MB/s eta 0:00:04\n",
+      "    --------------------------------------- 1.0/44.0 MB 12.1 MB/s eta 0:00:04\n",
+      "   - -------------------------------------- 1.4/44.0 MB 11.5 MB/s eta 0:00:04\n",
+      "   - -------------------------------------- 2.0/44.0 MB 11.4 MB/s eta 0:00:04\n",
+      "   -- ------------------------------------- 2.5/44.0 MB 11.4 MB/s eta 0:00:04\n",
+      "   -- ------------------------------------- 3.0/44.0 MB 12.0 MB/s eta 0:00:04\n",
+      "   --- ------------------------------------ 3.5/44.0 MB 11.6 MB/s eta 0:00:04\n",
+      "   --- ------------------------------------ 4.0/44.0 MB 11.1 MB/s eta 0:00:04\n",
+      "   ---- ----------------------------------- 4.5/44.0 MB 11.4 MB/s eta 0:00:04\n",
+      "   ---- ----------------------------------- 5.0/44.0 MB 11.5 MB/s eta 0:00:04\n",
+      "   ----- ---------------------------------- 5.6/44.0 MB 11.6 MB/s eta 0:00:04\n",
+      "   ----- ---------------------------------- 6.2/44.0 MB 11.7 MB/s eta 0:00:04\n",
+      "   ------ --------------------------------- 6.7/44.0 MB 11.6 MB/s eta 0:00:04\n",
+      "   ------ --------------------------------- 7.3/44.0 MB 11.7 MB/s eta 0:00:04\n",
+      "   ------- -------------------------------- 7.9/44.0 MB 11.8 MB/s eta 0:00:04\n",
+      "   ------- -------------------------------- 8.5/44.0 MB 11.8 MB/s eta 0:00:03\n",
+      "   -------- ------------------------------- 9.2/44.0 MB 12.0 MB/s eta 0:00:03\n",
+      "   -------- ------------------------------- 9.8/44.0 MB 12.1 MB/s eta 0:00:03\n",
+      "   --------- ------------------------------ 10.5/44.0 MB 12.1 MB/s eta 0:00:03\n",
+      "   --------- ------------------------------ 11.0/44.0 MB 12.1 MB/s eta 0:00:03\n",
+      "   ---------- ----------------------------- 11.7/44.0 MB 12.4 MB/s eta 0:00:03\n",
+      "   ----------- ---------------------------- 12.3/44.0 MB 12.6 MB/s eta 0:00:03\n",
+      "   ----------- ---------------------------- 13.0/44.0 MB 12.3 MB/s eta 0:00:03\n",
+      "   ------------ --------------------------- 13.7/44.0 MB 12.6 MB/s eta 0:00:03\n",
+      "   ------------- -------------------------- 14.4/44.0 MB 12.8 MB/s eta 0:00:03\n",
+      "   ------------- -------------------------- 14.9/44.0 MB 12.8 MB/s eta 0:00:03\n",
+      "   -------------- ------------------------- 15.7/44.0 MB 13.4 MB/s eta 0:00:03\n",
+      "   -------------- ------------------------- 16.4/44.0 MB 13.4 MB/s eta 0:00:03\n",
+      "   --------------- ------------------------ 17.2/44.0 MB 13.6 MB/s eta 0:00:02\n",
+      "   ---------------- ----------------------- 18.0/44.0 MB 13.9 MB/s eta 0:00:02\n",
+      "   ----------------- ---------------------- 18.7/44.0 MB 14.2 MB/s eta 0:00:02\n",
+      "   ----------------- ---------------------- 19.4/44.0 MB 14.2 MB/s eta 0:00:02\n",
+      "   ------------------ --------------------- 20.1/44.0 MB 14.6 MB/s eta 0:00:02\n",
+      "   ------------------- -------------------- 21.0/44.0 MB 14.9 MB/s eta 0:00:02\n",
+      "   ------------------- -------------------- 21.7/44.0 MB 14.9 MB/s eta 0:00:02\n",
+      "   -------------------- ------------------- 22.5/44.0 MB 15.2 MB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 23.3/44.0 MB 15.6 MB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 24.1/44.0 MB 16.0 MB/s eta 0:00:02\n",
+      "   ---------------------- ----------------- 24.6/44.0 MB 15.6 MB/s eta 0:00:02\n",
+      "   ---------------------- ----------------- 25.3/44.0 MB 16.0 MB/s eta 0:00:02\n",
+      "   ----------------------- ---------------- 26.0/44.0 MB 16.0 MB/s eta 0:00:02\n",
+      "   ------------------------ --------------- 26.7/44.0 MB 16.0 MB/s eta 0:00:02\n",
+      "   ------------------------- -------------- 27.6/44.0 MB 16.0 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 28.7/44.0 MB 15.6 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 29.7/44.0 MB 16.0 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 30.6/44.0 MB 16.0 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 31.3/44.0 MB 16.0 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 32.4/44.0 MB 15.6 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 33.2/44.0 MB 15.6 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 34.2/44.0 MB 16.0 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 34.9/44.0 MB 16.4 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 35.9/44.0 MB 17.2 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 36.6/44.0 MB 16.8 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 37.4/44.0 MB 17.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 38.4/44.0 MB 18.2 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 39.2/44.0 MB 18.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 40.1/44.0 MB 18.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 41.0/44.0 MB 18.7 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 42.0/44.0 MB 18.7 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 42.6/44.0 MB 18.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  43.6/44.0 MB 18.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 44.0/44.0 MB 18.2 MB/s eta 0:00:00\n",
+      "Downloading threadpoolctl-3.2.0-py3-none-any.whl (15 kB)\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
+      "Successfully installed joblib-1.3.2 scikit-learn-1.3.0 scipy-1.11.2 threadpoolctl-3.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ee992e0b-6f53-41be-b447-b8ab60a72495",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -40,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "4f102dce-0ac3-4d7e-b424-3d8c2405ff51",
    "metadata": {
     "scrolled": true
@@ -65,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "0880956b-2d24-4c02-976c-5cf7a59ad1a4",
    "metadata": {},
    "outputs": [],
@@ -81,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "a615ed4e-b75c-4b88-9bcd-5877fd5cb380",
    "metadata": {},
    "outputs": [],
@@ -99,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "c36484ac-6629-4b97-90c1-d58f3af60ffb",
    "metadata": {},
    "outputs": [],
@@ -114,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "54d63080-27f2-4766-8439-f17595344a03",
    "metadata": {
     "tags": []
@@ -477,7 +613,7 @@
        "[20631 rows x 27 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "2faa2c50-832e-4a60-a2ad-cbc7e441e53e",
    "metadata": {
     "tags": []
@@ -510,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "b8e1555a-690b-4a1a-9090-8889721484d7",
    "metadata": {},
    "outputs": [
@@ -823,7 +959,7 @@
        "[20631 rows x 17 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "348c614b-317b-4aee-93a8-14ccbbf0e008",
    "metadata": {},
    "outputs": [],
@@ -855,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "4fc7c916-7b51-43f2-ab78-57a917307734",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1352,7 @@
        "[13096 rows x 27 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "1d4685d8-a62d-488b-ba24-1538f2b97d4f",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1474,7 @@
        "[100 rows x 1 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "52718e8a-a2e6-443d-98db-1aa452664f93",
    "metadata": {
     "tags": []
@@ -1426,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "eaeb9e71-0b68-44c8-bbf4-375d8efddb4f",
    "metadata": {
     "tags": []
@@ -1460,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "765c932c-fe50-4e80-aba5-e348f55e2b09",
    "metadata": {},
    "outputs": [
@@ -1773,7 +1909,7 @@
        "[20631 rows x 17 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "670c0b0c-4dfb-4889-b690-f321a516ff3c",
    "metadata": {},
    "outputs": [
@@ -2145,7 +2281,7 @@
        "[13096 rows x 27 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2156,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "82f05860-2302-484b-b8ee-f60b181ae609",
    "metadata": {},
    "outputs": [
@@ -2251,7 +2387,7 @@
        "[100 rows x 1 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2262,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "19806f23-1f6e-4fd1-82fe-33755db19319",
    "metadata": {},
    "outputs": [],
@@ -2355,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "12285189-6189-4b11-a26f-5922bce802ca",
    "metadata": {
     "scrolled": true
@@ -2375,6 +2511,27 @@
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "windows_array, labels_array, test_df, WINDOW_LENGTH, window_cols = process_data_lstm(df_train, df_test, RUL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "414f57f6-982b-4f9d-9d85-b04020e5a228",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_array[-1]"
    ]
   },
   {
@@ -2837,7 +2994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
